--- a/src/views/website/pages/CLM.ejs
+++ b/src/views/website/pages/CLM.ejs
@@ -8,19 +8,23 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover the Campus Life Ministry at Ashoka University. Learn about its focus on residence life, dining, transport, and security to enhance campus life." />
-  <meta name="keywords" content="Ashoka University, AUSG, Campus Life Ministry, Residence Life, Dining, Security, Campus Amenities, Student Welfare, Policy Suggestions" />
+  <meta name="description"
+    content="Discover the Campus Life Ministry at Ashoka University. Learn about its focus on residence life, dining, transport, and security to enhance campus life." />
+  <meta name="keywords"
+    content="Ashoka University, AUSG, Campus Life Ministry, Residence Life, Dining, Security, Campus Amenities, Student Welfare, Policy Suggestions" />
   <meta name="author" content="Ashoka University Student Government" />
 
   <meta property="og:title" content="Campus Life Ministry - Ashoka University Student Government" />
-  <meta property="og:description" content="Explore the Campus Life Ministry's efforts to ensure a comfortable and safe campus life for students at Ashoka University." />
+  <meta property="og:description"
+    content="Explore the Campus Life Ministry's efforts to ensure a comfortable and safe campus life for students at Ashoka University." />
   <meta property="og:image" content="to_be_inserted" />
   <meta property="og:url" content="https://sg.ashoka.edu.in/campus-life" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Campus Life Ministry - Ashoka University Student Government" />
-  <meta name="twitter:description" content="Learn about the Campus Life Ministry and its focus on improving campus facilities and policies for students." />
+  <meta name="twitter:description"
+    content="Learn about the Campus Life Ministry and its focus on improving campus facilities and policies for students." />
   <meta name="twitter:image" content="to_be_inserted" />
   <meta name="twitter:site" content="@ashokaunisg" />
 
@@ -56,48 +60,48 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<%-include("../partials/post-head")%>
+<%- include("../partials/post-head") %>
 
-<style>
-
-
-
-</style>
-
-<body>
-
-  <%-include("../partials/menu")%>
+  <style>
 
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center">
 
-      <!-- Background image -->
-      <div class="text-center bg-image"
-        style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
-        <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">CAMPUS LIFE<br>MINISTRY</h1>
+  </style>
+
+  <body>
+
+    <%- include("../partials/menu") %>
+
+
+      <!-- ======= Hero Section ======= -->
+      <section id="hero" class="d-flex align-items-center">
+
+        <!-- Background image -->
+        <div class="text-center bg-image"
+          style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
+          <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                <h1 class="mb-3">CAMPUS LIFE<br>MINISTRY</h1>
+              </div>
             </div>
           </div>
-        </div>
-      </div><!-- Background image -->
+        </div><!-- Background image -->
 
-    </section><!-- End Hero -->
+      </section><!-- End Hero -->
 
-    <main id="main">
+      <main id="main">
 
-      <!-- ======= About Us Section ======= -->
-      <section id="about" class="about">
-        <div class="container">
+        <!-- ======= About Us Section ======= -->
+        <section id="about" class="about">
+          <div class="container">
 
-          <div class="section-title" data-aos="fade-up">
-            <h2>About</h2>
-          </div>
+            <div class="section-title" data-aos="fade-up">
+              <h2>About</h2>
+            </div>
 
-          <div class="row content">
-            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+            <div class="row content">
+              <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -108,151 +112,174 @@
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
             </ul>
           </div> -->
-            <div class="col-lg-12 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
-              <p>
-                The Campus Life Ministry is responsible for representing the diverse interests of students at Ashoka in
-                the areas of residence life, dining, transport, and security. The Ministry strives to ensure that the
-                everyday life of students on campus is pleasant and comfortable.
-              </p>
+              <div class="col-lg-12 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
+                <p>
+                  The Campus Life Ministry is responsible for representing the diverse interests of students at Ashoka
+                  in
+                  the areas of residence life, dining, transport, and security. The Ministry strives to ensure that the
+                  everyday life of students on campus is pleasant and comfortable.
+                </p>
+                <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
+              </div>
+            </div>
+
+          </div>
+        </section><!-- End About Us Section -->
+
+        <section id="about" class="about">
+          <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+              <h2>Mandate</h2>
+            </div>
+
+            <div class="row content">
+              <div class="col-lg-12" data-aos="fade-up" data-aos-delay="150">
+                <ul>
+                  <li><i class="ri-check-double-line"></i> Ensure open communication between the administration and
+                    student body about campus life related concerns</li>
+                  <li><i class="ri-check-double-line"></i> Facilitate redressal of grievances about campus experience
+                  </li>
+                  <li><i class="ri-check-double-line"></i> Collect feedback about campus experience and suggest policy
+                    and
+                    facility changes based on collected data</li>
+                  <li><i class="ri-check-double-line"></i> Periodically review campus life policies and suggest
+                    amendments
+                    to protect student interests</li>
+                  <li><i class="ri-check-double-line"></i> Monitor the quality of services and amenities on campus</li>
+                  <li><i class="ri-check-double-line"></i> Represent the student body in the Vendors Management
+                    Committee
+                    and the Mess Committee</li>
+                  <li><i class="ri-check-double-line"></i> Document the changes to campus life through policies and
+                    amenities at Ashoka</li>
+                </ul>
+              </div>
+              <!-- <div class="col-lg-6 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
+            <p>
+              Ashokan culture is a diverse set of ideas, identities, backgrounds, and interests. The Cultural Ministry, also known as Jazbaa, brings all these aspects together and makes the most out of it by ensuring a diverse and continuous set of engaging activities on campus. The ministry works on materializing the inclusivity in on-campus events by collaborating with the student body and over 30 clubs and societies on campus, along with building and maintaining an engagement with the world outside of Ashoka by encouraging intercollegiate events participation. It tries to ensure that all Ashokans find time to take breaks and replenish through socializing and investing in activities outside of the classroom. The Cultural Ministry, in essence, brings Ashoka to life.
+            </p> -->
               <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
             </div>
           </div>
 
-        </div>
-      </section><!-- End About Us Section -->
-
-      <section id="about" class="about">
-        <div class="container">
-
-          <div class="section-title" data-aos="fade-up">
-            <h2>Mandate</h2>
           </div>
+        </section><!-- End About Us Section -->
 
-          <div class="row content">
-            <div class="col-lg-12" data-aos="fade-up" data-aos-delay="150">
-              <ul>
-                <li><i class="ri-check-double-line"></i> Ensure open communication between the administration and
-                  student body about campus life related concerns</li>
-                <li><i class="ri-check-double-line"></i> Facilitate redressal of grievances about campus experience</li>
-                <li><i class="ri-check-double-line"></i> Collect feedback about campus experience and suggest policy and
-                  facility changes based on collected data</li>
-                <li><i class="ri-check-double-line"></i> Periodically review campus life policies and suggest amendments
-                  to protect student interests</li>
-                <li><i class="ri-check-double-line"></i> Monitor the quality of services and amenities on campus</li>
-                <li><i class="ri-check-double-line"></i> Represent the student body in the Vendors Management Committee
-                  and the Mess Committee</li>
-                <li><i class="ri-check-double-line"></i> Document the changes to campus life through policies and
-                  amenities at Ashoka</li>
-              </ul>
+        <!-- ======= Team Section ======= -->
+        <section id="team" class="team section-bg">
+          <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+              <h2>Team</h2>
             </div>
-            <!-- <div class="col-lg-6 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
-            <p>
-              Ashokan culture is a diverse set of ideas, identities, backgrounds, and interests. The Cultural Ministry, also known as Jazbaa, brings all these aspects together and makes the most out of it by ensuring a diverse and continuous set of engaging activities on campus. The ministry works on materializing the inclusivity in on-campus events by collaborating with the student body and over 30 clubs and societies on campus, along with building and maintaining an engagement with the world outside of Ashoka by encouraging intercollegiate events participation. It tries to ensure that all Ashokans find time to take breaks and replenish through socializing and investing in activities outside of the classroom. The Cultural Ministry, in essence, brings Ashoka to life.
-            </p> -->
-            <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
+
+            <div class="row">
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
+                <div class="member" data-aos="fade-up" data-aos-delay="50">
+                  <div class="member-img">
+                    <img src="/website/assets/img/ministryHeads/AvekaJain-UG2023-CLM.jpg" class="img-fluid" alt="">
+                  </div>
+                  <div class="member-info">
+                    <h4><a href="mailto:aveka.jain_ug2023@ashoka.edu.in">Aveka Jain (UG2023)</a></h4>
+                    <span>Minister</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+        </section><!-- End Team Section -->
 
-        </div>
-      </section><!-- End About Us Section -->
+        <!-- ======= F.A.Q Section ======= -->
+        <section id="faq" class="faq">
+          <div class="container">
 
-      <!-- ======= F.A.Q Section ======= -->
-      <section id="faq" class="faq">
-        <div class="container">
-
-          <div class="section-title" data-aos="fade-up">
-            <h2>Team Members</h2>
+            <div class="section-title" data-aos="fade-up">
+              <h2>Team Members</h2>
+            </div>
+            <center>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>Ministers</b>
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <p>
+                    <a href="mailto:aveka.jain_ug2023@ashoka.edu.in">Aveka Jain (UG2023)</a> - Minister
+                  </p>
+                </div>
+              </div>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>Dining</b>
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <p>
+                    Tanya Chatterjee - HOD
+                  </p>
+                </div>
+              </div>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>Residence Life</b>
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <p>
+                    Urja Hansraj - HOD
+                  </p>
+                </div>
+              </div>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>Policy & Research</b>
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <p>
+                    Dia Daryanani - HOD
+                  </p>
+                </div>
+              </div>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>Website and Media</b>
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <p>
+                    Kenisha Chandak - HOD
+                  </p>
+                </div>
+              </div>
+            </center>
           </div>
-          <center>
-            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-              <div class="col-lg-6">
-                <p>
-                  <b>Ministers</b>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  Niyati Pendekanti - Advisor
-                  <br>
-                  Paarthvi Raj Singh - Minister
-                  <br>
-                  Nishant Kumar - Deputy Minister
-                  <br>
-                  Aditi Gupta - Deputy Minister
-                </p>
-              </div>
-            </div>
-            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-              <div class="col-lg-6">
-                <p>
-                  <b>Dining</b>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  Tanya Chatterjee - HOD
-                </p>
-              </div>
-            </div>
-            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-              <div class="col-lg-6">
-                <p>
-                  <b>Residence Life</b>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  Urja Hansraj - HOD
-                </p>
-              </div>
-            </div>
-            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-              <div class="col-lg-6">
-                <p>
-                  <b>Policy & Research</b>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  Dia Daryanani - HOD
-                </p>
-              </div>
-            </div>
-            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-              <div class="col-lg-6">
-                <p>
-                  <b>Website and Media</b>
-                </p>
-              </div>
-              <div class="col-lg-6">
-                <p>
-                  Kenisha Chandak - HOD
-                </p>
-              </div>
-            </div>
-          </center>
-        </div>
-      </section><!-- End F.A.Q Section -->
+        </section><!-- End F.A.Q Section -->
 
-      <%-include("../partials/footer")%>
-    </main>
-    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+        <%- include("../partials/footer") %>
+      </main>
+      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-    <!-- Vendor JS Files -->
-    <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="/website/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
-    <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
-    <script src="/website/assets/vendor/aos/aos.js"></script>
+      <!-- Vendor JS Files -->
+      <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
+      <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+      <script src="/website/assets/vendor/php-email-form/validate.js"></script>
+      <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+      <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
+      <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+      <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
+      <script src="/website/assets/vendor/aos/aos.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="/website/assets/js/main.js"></script>
+      <!-- Template Main JS File -->
+      <script src="/website/assets/js/main.js"></script>
 
-</body>
+  </body>
 
 </html>
