--- a/src/views/website/pages/about.ejs
+++ b/src/views/website/pages/about.ejs
@@ -99,10 +99,10 @@
             <div class="row content">
               <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
                 <p>
-                  The Student Government is a combination of appointed and elected representatives. They represent the interests and concerns of the student body, to provide services and support to the student body, to advocate for student welfare in a diverse, just and liberal environment, to foster a sense of belonging and community among students, to promote social responsibility and help enhance the quality of education and student experience by engaging with faculty and administration.
+                  The Ashoka University Student Government (AUSG) is the representative body elected by and for students. It serves as the primary channel of communication between the student body and the University administration, ensuring that student concerns, initiatives, and perspectives are heard and acted upon.
                 </p>
                 <p>
-                  The SG refers to all elected members (President, Vice President, Council Members), Cabinet Members, the Treasurer and the Public Relations Director. All aforementioned position holders are part of the Executive.
+                  The AUSG functions under the Student Government Constitution and operates through three principal bodies: the Councils, the House of Representatives, and the Executive Cabinet.
                 </p>
               </div>
             </div>
