--- a/src/views/website/pages/hor-about.ejs
+++ b/src/views/website/pages/hor-about.ejs
@@ -9,13 +9,16 @@
   <!-- SEO Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn about the House of Representatives (HoR) of the Ashoka University Student Government (AUSG), its structure, functions, and commitment to addressing university-wide student issues." />
-  <meta name="keywords" content="Ashoka University, AUSG, House of Representatives, HoR, Student Government, HoR Members, Student Representation, Legislative Body, University-wide Issues, Student Advocacy, HoR Speaker, Public Records, Stakeholder Consultation, Social Media Campaigns, Townhalls, Student Cohort Issues, Electoral Code" />
+  <meta name="description"
+    content="Learn about the House of Representatives (HoR) of the Ashoka University Student Government (AUSG), its structure, functions, and commitment to addressing university-wide student issues." />
+  <meta name="keywords"
+    content="Ashoka University, AUSG, House of Representatives, HoR, Student Government, HoR Members, Student Representation, Legislative Body, University-wide Issues, Student Advocacy, HoR Speaker, Public Records, Stakeholder Consultation, Social Media Campaigns, Townhalls, Student Cohort Issues, Electoral Code" />
   <meta name="author" content="Ashoka University Student Government" />
 
   <!-- Open Graph Meta Tags for Social Sharing -->
   <meta property="og:title" content="House of Representatives (HoR) - Ashoka University Student Government (AUSG)" />
-  <meta property="og:description" content="Discover the roles, responsibilities, and members of the House of Representatives (HoR) in the Ashoka University Student Government, dedicated to addressing student issues and advocating for the student body." />
+  <meta property="og:description"
+    content="Discover the roles, responsibilities, and members of the House of Representatives (HoR) in the Ashoka University Student Government, dedicated to addressing student issues and advocating for the student body." />
   <meta property="og:image" content="to_be_inserted" />
   <meta property="og:url" content="https://sg.ashoka.edu.in/house-of-representatives" />
   <meta property="og:type" content="website" />
@@ -23,7 +26,8 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="House of Representatives (HoR) - Ashoka University Student Government" />
-  <meta name="twitter:description" content="Learn about the structure and work of the HoR at Ashoka University, representing the student body in addressing university-wide issues." />
+  <meta name="twitter:description"
+    content="Learn about the structure and work of the HoR at Ashoka University, representing the student body in addressing university-wide issues." />
   <meta name="twitter:image" content="to_be_inserted" />
   <meta name="twitter:site" content="@ashokaunisg" />
 
@@ -59,46 +63,47 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<%-include("../partials/post-head")%>
+<%- include('../partials/post-head') %>
 
-<style>
+  <style>
 
 
 
-</style>
+  </style>
 
-<body>
-  <%-include("../partials/menu")%>
+  <body>
+    <!-- prettier-ignore -->
+    <%- include("../partials/menu") %>
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center">
+      <!-- ======= Hero Section ======= -->
+      <section id="hero" class="d-flex align-items-center">
 
-      <!-- Background image -->
-      <div class="text-center bg-image"
-        style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
-        <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">ABOUT THE<br>HoR</h1>
+        <!-- Background image -->
+        <div class="text-center bg-image"
+          style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
+          <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                <h1 class="mb-3">ABOUT THE<br>HoR</h1>
+              </div>
             </div>
           </div>
-        </div>
-      </div><!-- Background image -->
+        </div><!-- Background image -->
 
-    </section><!-- End Hero -->
+      </section><!-- End Hero -->
 
-    <main id="main">
+      <main id="main">
 
-      <!-- ======= About Us Section ======= -->
-      <section id="about" class="about">
-        <div class="container">
+        <!-- ======= About Us Section ======= -->
+        <section id="about" class="about">
+          <div class="container">
 
-          <div class="section-title" data-aos="fade-up">
-            <h2>About HoR</h2>
-          </div>
-          <center>
-            <div class="row content">
-              <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+            <div class="section-title" data-aos="fade-up">
+              <h2>About HoR</h2>
+            </div>
+            <center>
+              <div class="row content">
+                <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -109,142 +114,115 @@
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
             </ul>
           </div> -->
-              <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
-                <p>
-                  The House of Representatives is composed of the SG President, Vice President and representatives from
-                  the four elected Councils as per the proportion defined in the Electoral Code, on the condition that
-                  each Council should have at least two representative seats in the House. The House Member with a
-                  majority of the House is the Speaker.
-                </p>
-                <p>
-                  The HoR act as representatives of the student body within and without the university. It maintains
-                  public records of its meetings and decisions, takes on issues deemed in the interest of the student
-                  body, has the power to pass legislation and make decisions and statements on behalf of the student
-                  body after consultation with the concerned stakeholders.The difference between the Councils and the HoR is that the former can only work on concerns pertaining to the academic cohort they represent. The HoR takes up university-wide issues which affect the student body, as a whole. 
-                </p>
-                <p>
-                  The 8th House of Representatives has worked on organising social media campaigns against the removal of Prof Das, organised townhalls for information dissemination.
-                </p>
-                <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
-              </div>
-            </div>
-          </center>
-        </div>
-      </section><!-- End About Us Section -->
-
-      <!-- ======= Team Section ======= -->
-      <section id="team" class="team section-bg">
-        <div class="container">
-
-          <div class="section-title" data-aos="fade-up">
-            <h2>Message from Ahana</h2>
-          </div>
-
-          <div class="row">
-
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
-              <div class="member" data-aos="fade-up" data-aos-delay="50">
-                <div class="member-img">
-                  <img src="/website/assets/img/ahana.jpeg" class="img-fluid" alt="">
-                </div>
-                <div class="member-info">
-                  <h4>Ahana Walanju</h4>
-                  <span>Speaker of the House</span>
+                <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
+                  <p>
+                    The House of Representatives is the primary legislative and decision-making body of the Student
+                    Government. It includes representatives from each Council, proportional to cohort size, and
+                    deliberates on issues affecting students, passes motions and resolutions, and oversees the work of
+                    the Executive.
+                  </p>
+                  <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
                 </div>
               </div>
-            </div>
-
-            <div class="col-lg-6 col-md-6 d-flex align-items-stretch mx-auto my-auto" data-aos="fade-up">
-              <p>
-                Hello everybody! We are all incredibly excited to work as the representatives of the student body, and
-                are very grateful for your support and faith. The HoR acts as representatives of the student body within
-                and outside the university. We maintain public records of our meetings and decisions and take on issues
-                that work in the interest of the student body. Please do not hesitate to ask questions of us, or bring
-                to our attention any issues that you wish for us to address. Feel free to use the ticketing system to
-                contact us or reach out to us individually for any issues.
-              </p>
-            </div>
-
+            </center>
           </div>
+        </section><!-- End About Us Section -->
 
-        </div>
-      </section><!-- End Team Section -->
-
-      <!-- ======= F.A.Q Section ======= -->
-      <section id="faq" class="faq">
-        <div class="container">
+        <!-- ======= Speaker Section ======= -->
+        <section id="team" class="team section-bg">
+          <div class="container">
 
             <div class="section-title" data-aos="fade-up">
-                <h2>Members</h2>
+              <h2>Speaker</h2>
+            </div>
+
+            <div class="row">
+
+              <div class="col-lg-6 col-md-6 d-flex align-items-stretch mx-auto">
+                <div class="member" data-aos="fade-up" data-aos-delay="50">
+                  <div class="member-img">
+                    <img src="/website/assets/img/SnehaMenon-UG25-SpeakerOfHoR.jpg" class="img-fluid" alt="">
+                  </div>
+                  <div class="member-info">
+                    <h4>Sneha Menon (UG25)</h4>
+                    <span>Speaker of the House</span>
+                    <p><a href="mailto:sneha.menon_ug25@ashoka.edu.in">sneha.menon_ug25@ashoka.edu.in</a></p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+        </section><!-- End Speaker Section -->
+        <br />
+        <br />
+        <div class="col-lg-8 col-md-8 d-flex align-items-stretch mx-auto my-auto text-center" data-aos="fade-up"
+          data-aos-delay="50">
+          <p>
+            Hello everybody! We are all incredibly excited to work as the representatives of the student body, and
+            are very grateful for your support and faith. The HoR acts as representatives of the student body
+            within
+            and outside the university. We maintain public records of our meetings and decisions and take on
+            issues
+            that work in the interest of the student body. Please do not hesitate to ask questions of us, or bring
+            to our attention any issues that you wish for us to address. Feel free to use the ticketing system to
+            contact us or reach out to us individually for any issues.
+          </p>
+        </div>
+
+        <!-- ======= F.A.Q Section ======= -->
+        <section id="faq" class="faq">
+          <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+              <h2>Members</h2>
             </div>
             <center>
-                <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-                    <div class="col-lg-6">
-                        <p>
-                            <b>HoR Members</b>
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <p>
-                          Prachet Sinha
-                          <br>
-                          Saairah Mehta
-                          <br>
-                          Ananya Makker 
-                          <br>
-                          Anulya P
-                          <br>
-                          Rahul Kumar
-                          <br>
-                          Aekam Mohan Singh Gulati
-                            <!-- Aditi Warrier
-                            <br>
-                            Ahana Walanju
-                            <br>
-                            Anshika Mittal
-                            <br>
-                            Prachet Shina
-                            <br>
-                            Rishit Roy
-                            <br>
-                            Rutupurna Debalina Naik
-                            <br>
-                            Samarth Jain
-                            <br>
-                            Sankalp Dasmohapatra
-                            <br>
-                            Tamanna Parikh
-                            <br>
-                            Trishika Singhania -->
-                        </p>
-                    </div>
+              <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                <div class="col-lg-6">
+                  <p>
+                    <b>HoR Members</b>
+                  </p>
                 </div>
+                <div class="col-lg-6">
+                  <p>
+                    <a href="mailto:tanisha.iyer_ug25@ashoka.edu.in">Tanisha Iyer (UG25)</a>
+                    <br>
+                    <a href="mailto:karandeep.gill_ug25@ashoka.edu.in">Karandeep Gill (UG25)</a>
+                    <br>
+                    <a href="mailto:ayush.solapurkar_ug2023@ashoka.edu.in">Ayush Solapurkar (UG2023)</a>
+                    <br>
+                    <a href="mailto:naisha.kamboj_ug25@ashoka.edu.in">Naisha Kamboj (UG25)</a>
+                    <br>
+                    <a href="mailto:hima.madhu_ug25@ashoka.edu.in">Hima Madhu (UG25)</a>
+                  </p>
                 </div>
-            </center>
-        </div>
-    </section><!-- End F.A.Q Section -->
+              </div>
+          </div>
+          </center>
+          </div>
+        </section><!-- End F.A.Q Section -->
 
-      <%-include("../partials/footer")%>
+        <%- include("../partials/footer") %>
 
-    </main><!-- End #main -->
+      </main><!-- End #main -->
 
-    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-    <!-- Vendor JS Files -->
-    <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="/website/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
-    <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
-    <script src="/website/assets/vendor/aos/aos.js"></script>
+      <!-- Vendor JS Files -->
+      <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
+      <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+      <script src="/website/assets/vendor/php-email-form/validate.js"></script>
+      <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+      <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
+      <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+      <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
+      <script src="/website/assets/vendor/aos/aos.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="/website/assets/js/main.js"></script>
+      <!-- Template Main JS File -->
+      <script src="/website/assets/js/main.js"></script>
 
-</body>
+  </body>
 
 </html>
