--- a/src/views/website/pages/index.ejs
+++ b/src/views/website/pages/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Ashoka University Student Government</title>
   <script src="/website/assets/js/theme.js
@@ -8,13 +9,16 @@
   <!-- SEO Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Welcome to the official website of the Ashoka University Student Government (AUSG). Discover how AUSG represents the student body, fosters communication with the administration, and enhances the Ashoka student experience." />
-  <meta name="keywords" content="Ashoka University, Ashoka SG, Ashoka Student Government, Student representation, Student welfare, House of Representatives, Academic Councils, Ministries, Ashoka Student Experience, AUSG Constitution, Ashokan community, Student Advocacy, Ashoka University Administration" />
+  <meta name="description"
+    content="Welcome to the official website of the Ashoka University Student Government (AUSG). Discover how AUSG represents the student body, fosters communication with the administration, and enhances the Ashoka student experience." />
+  <meta name="keywords"
+    content="Ashoka University, Ashoka SG, Ashoka Student Government, Student representation, Student welfare, House of Representatives, Academic Councils, Ministries, Ashoka Student Experience, AUSG Constitution, Ashokan community, Student Advocacy, Ashoka University Administration" />
   <meta name="author" content="Ashoka University Student Government" />
 
   <!-- Open Graph Meta Tags for Social Sharing -->
   <meta property="og:title" content="Ashoka University Student Government (AUSG)" />
-  <meta property="og:description" content="Explore the Ashoka University Student Government's initiatives, leadership, and resources to enhance student life and advocate for the student body." />
+  <meta property="og:description"
+    content="Explore the Ashoka University Student Government's initiatives, leadership, and resources to enhance student life and advocate for the student body." />
   <meta property="og:image" content="to_be_inserted" />
   <meta property="og:url" content="https://sg.ashoka.edu.in/" />
   <meta property="og:type" content="website" />
@@ -22,19 +26,23 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ashoka University Student Government (AUSG)" />
-  <meta name="twitter:description" content="Learn how AUSG represents Ashoka University's student body, fosters community, and enhances the undergraduate experience." />
+  <meta name="twitter:description"
+    content="Learn how AUSG represents Ashoka University's student body, fosters community, and enhances the undergraduate experience." />
   <meta name="twitter:image" content="to_be_inserted" />
   <meta name="twitter:site" content="@ashokaunisg" />
 
   <!-- Favicons -->
   <link href="/website/assets/img/favicon.png" rel="icon">
   <link href="/website/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
   <!-- Vendor CSS Files -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="/website/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/website/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="/website/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -52,114 +60,128 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<%-include("../partials/post-head")%>
+<%- include('../partials/post-head') %>
 
-<body>
+  <body>
 
-  <%-include("../partials/menu")%>
+    <!-- prettier-ignore -->
+    <%- include("../partials/menu") %>
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center">
+      <!-- ======= Hero Section ======= -->
+      <section id="hero" class="d-flex align-items-center">
 
-    <!-- Background image -->
-    <div class="text-center bg-image" style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
-      <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white">
-            <h1 class="mb-3">ASHOKA<br>UNIVERSITY</h1>
-            <button type="button" class="btn btn-dark btn-lg" onclick="window.location.href='/platform'">Platform</button>
-          </div>
-        </div>
-      </div>
-    </div><!-- Background image -->
-
-  </section><!-- End Hero -->
-
-  <main id="main">
-
-    <!-- ======= About Us Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Welcome</h2>
-        </div>
-        
-        <div class="row content">
-          <div class="col-lg-12 pt-4 pt-lg-0 mx-auto" data-aos="fade-up" data-aos-delay="50">
-            <p style="text-align: center;">
-              <b>Ashoka University Student Government, 2024-2025</b>
-            </p>
-            <p>
-              On behalf of the Ashoka University Student Government (AUSG), it gives us immense pleasure to welcome you to Ashoka University! We are extremely pleased to have you join the Ashokan community. 
-            </p>
-            <p>
-              The AUSG is a governing body run by the students to represent collective demands of the student body and help facilitate communication with the university's administration.
-            </p>
-            <p>
-              The AUSG's governing document is the Student Government Constitution. It comprises the academic councils, the House of Representatives (HoR) and the Ministries. You can learn more about each of these bodies and how they make up the SG <a href="https://drive.google.com/drive/folders/0B1MDFq4W1AY7NktWVVRMMGJtb2s?resourcekey=0-ekyASsNU1kc1WI2g_YPa-g&usp=drive_link" target="_blank">here</a> 
-            </p>
-            <p>
-              It is our hope that every student at Ashoka has a wonderful undergraduate experience and can experience Ashoka at its best during their stay here. We, as the Student Government, are working to ensure that this is the case for all of you.
-            </p>
-            <p>
-              With that we hope during your time here at Ashoka, you get to try out new interests and enjoy the company of your peers. We wish you the very best of luck, during your time at Ashoka and in all your future endeavours.
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Us Section -->
-
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container">
-
-        <div class="row">
-
-          <div style="max-width:300px;max-height:400px;" class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
-            <div class="member" data-aos="fade-up" data-aos-delay="50">
-              <div style="max-width:300px;max-height:270px;object-fit: cover;" class="member-img">
-                <img src="/website/assets/img/AditiWarrier.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <!-- <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a> -->
-                  <a target="_blank" href="https://www.instagram.com/_aditi.warrier_"><i class="icofont-instagram"></i></a>
-                  <a target="_blank" href="https://www.linkedin.com/in/aditi-warrier-70a18b241/"><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Aditi Warrier</h4>
-                <span>President</span>
+        <!-- Background image -->
+        <div class="text-center bg-image"
+          style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
+          <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                <h1 class="mb-3">ASHOKA<br>UNIVERSITY</h1>
+                <button type="button" class="btn btn-dark btn-lg"
+                  onclick="window.location.href='/platform'">Platform</button>
               </div>
             </div>
           </div>
+        </div><!-- Background image -->
 
-          <div style="max-width:300px;max-height:400px;" class="col-lg-3 col-md-6 d-flex align-items-stretch mx-auto">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div style="max-width:300px;max-height:400px;" class="member-img">
-                <img src="/website/assets/img/SamarthJain.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <!-- <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a> -->
-                  <a target="_blank" href="https://www.instagram.com/samarthjain1007"><i class="icofont-instagram"></i></a>
-                  <a target="_blank" href="https://www.linkedin.com/in/samarth-jain-1007/"><i class="icofont-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Samarth Jain</h4>
-                <span>Vice President</span>
+      </section><!-- End Hero -->
+
+      <main id="main">
+
+        <!-- ======= About Us Section ======= -->
+        <section id="about" class="about">
+          <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+              <h2>Welcome</h2>
+            </div>
+
+            <div class="row content">
+              <div class="col-lg-12 pt-4 pt-lg-0 mx-auto" data-aos="fade-up" data-aos-delay="50">
+                <p style="text-align: center;">
+                  <b>Ashoka University Student Government, 2024-2025</b>
+                </p>
+                <p>
+                  On behalf of the Ashoka University Student Government (AUSG), it gives us immense pleasure to welcome
+                  you to Ashoka University! We are extremely pleased to have you join the Ashokan community.
+                </p>
+                <p>
+                  The AUSG is a governing body run by the students to represent collective demands of the student body
+                  and help facilitate communication with the university's administration.
+                </p>
+                <p>
+                  The AUSG's governing document is the Student Government Constitution. It comprises the academic
+                  councils, the House of Representatives (HoR) and the Ministries. You can learn more about each of
+                  these bodies and how they make up the SG <a
+                    href="https://drive.google.com/drive/folders/0B1MDFq4W1AY7NktWVVRMMGJtb2s?resourcekey=0-ekyASsNU1kc1WI2g_YPa-g&usp=drive_link"
+                    target="_blank">here</a>
+                </p>
+                <p>
+                  It is our hope that every student at Ashoka has a wonderful undergraduate experience and can
+                  experience Ashoka at its best during their stay here. We, as the Student Government, are working to
+                  ensure that this is the case for all of you.
+                </p>
+                <p>
+                  With that we hope during your time here at Ashoka, you get to try out new interests and enjoy the
+                  company of your peers. We wish you the very best of luck, during your time at Ashoka and in all your
+                  future endeavours.
+                </p>
               </div>
             </div>
+
           </div>
+        </section><!-- End About Us Section -->
 
-        </div>
+        <!-- ======= Team Section ======= -->
+        <section id="team" class="team section-bg">
+          <div class="container">
 
-      </div>
-    </section><!-- End Team Section -->
+            <div class="row">
 
-    <!-- ======= SG Ticketing ======= -->
-    <!-- <section id="about" class="about">
+              <div style="max-width:800px;max-height:500px;"
+                class="col-lg-4 col-md-6 d-flex align-items-stretch mx-auto">
+                <div class="member" data-aos="fade-up" data-aos-delay="50">
+                  <div style="max-width:800px;max-height:500px;object-fit: cover;" class="member-img">
+                    <img src="/website/assets/img/InshaHusain-UG25-President.jpg" class="img-fluid" alt="">
+                    <div class="social">
+                      <!-- <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a> -->
+                      <a target="_blank" href="mailto:insha.husain_ug25@ashoka.edu.in"><i class="icofont-email"></i></a>
+                    </div>
+                  </div>
+                  <div class="member-info">
+                    <h4>Insha Husain</h4>
+                    <span>President</span>
+                  </div>
+                </div>
+              </div>
+
+              <div style="max-width:800px;max-height:500px;"
+                class="col-lg-4 col-md-6 d-flex align-items-stretch mx-auto">
+                <div class="member" data-aos="fade-up" data-aos-delay="200">
+                  <div style="max-width:800px;max-height:500px;" class="member-img">
+                    <img src="/website/assets/img/AhanaWalanju-UG25-VP.jpg" class="img-fluid" alt="">
+                    <div class="social">
+                      <!-- <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a> -->
+                      <a target="_blank" href="mailto:ahana.walanju_ug25@ashoka.edu.in"><i
+                          class="icofont-email"></i></a>
+                    </div>
+                  </div>
+                  <div class="member-info">
+                    <h4>Ahana Walanju</h4>
+                    <span>Vice President</span>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </section><!-- End Team Section -->
+
+        <!-- ======= SG Ticketing ======= -->
+        <!-- <section id="about" class="about">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -178,29 +200,29 @@
         </div>
       </div>
     </section> -->
-    <!-- SG Ticketing -->
+        <!-- SG Ticketing -->
 
-    <%-include("../partials/footer")%>
+        <%- include("../partials/footer") %>
 
-  </main><!-- End #main -->
+      </main><!-- End #main -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="/website/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
-  <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
-  <script src="/website/assets/vendor/aos/aos.js"></script>
+      <!-- Vendor JS Files -->
+      <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
+      <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+      <script src="/website/assets/vendor/php-email-form/validate.js"></script>
+      <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+      <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
+      <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+      <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
+      <script src="/website/assets/vendor/aos/aos.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="/website/assets/js/main.js"></script>
+      <!-- Template Main JS File -->
+      <script src="/website/assets/js/main.js"></script>
 
-</body>
+  </body>
 
 </html>
