--- a/src/views/website/pages/about-cabinet.ejs
+++ b/src/views/website/pages/about-cabinet.ejs
@@ -9,13 +9,16 @@
   <!-- SEO Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn about the Cabinet of the Ashoka University Student Government (AUSG). Discover the roles of the seven ministries, their mandates, and their contributions to enhancing student life at Ashoka University." />
-  <meta name="keywords" content="Ashoka University, AUSG, Cabinet, Student Government, Ministries, Cultural Ministry, Jazbaa, Technology Ministry, Ministry of Academic Affairs, Tarang, Environment Ministry, Ministry of Community and Wellbeing, Campus Life Ministry, Sports Ministry, Student Life, Student Advocacy, Cabinet Members, Leadership at Ashoka" />
+  <meta name="description"
+    content="Learn about the Cabinet of the Ashoka University Student Government (AUSG). Discover the roles of the seven ministries, their mandates, and their contributions to enhancing student life at Ashoka University." />
+  <meta name="keywords"
+    content="Ashoka University, AUSG, Cabinet, Student Government, Ministries, Cultural Ministry, Jazbaa, Technology Ministry, Ministry of Academic Affairs, Tarang, Environment Ministry, Ministry of Community and Wellbeing, Campus Life Ministry, Sports Ministry, Student Life, Student Advocacy, Cabinet Members, Leadership at Ashoka" />
   <meta name="author" content="Ashoka University Student Government" />
 
   <!-- Open Graph Meta Tags for Social Sharing -->
   <meta property="og:title" content="The Cabinet - Ashoka University Student Government (AUSG)" />
-  <meta property="og:description" content="Explore the Cabinet of the Ashoka University Student Government, comprising seven ministries dedicated to improving various aspects of student life." />
+  <meta property="og:description"
+    content="Explore the Cabinet of the Ashoka University Student Government, comprising seven ministries dedicated to improving various aspects of student life." />
   <meta property="og:image" content="to_be_inserted" />
   <meta property="og:url" content="https://sg.ashoka.edu.in/cabinet" />
   <meta property="og:type" content="website" />
@@ -23,7 +26,8 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Cabinet - Ashoka University Student Government" />
-  <meta name="twitter:description" content="Learn about the Cabinet of the AUSG and the seven ministries working to enhance student life at Ashoka University." />
+  <meta name="twitter:description"
+    content="Learn about the Cabinet of the AUSG and the seven ministries working to enhance student life at Ashoka University." />
   <meta name="twitter:image" content="to_be_inserted" />
   <meta name="twitter:site" content="@ashokaunisg" />
 
@@ -59,70 +63,114 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<%-include("../partials/post-head")%>
+<%- include('../partials/post-head') %>
 
-<style>
-
-
-
-</style>
-
-<body>
-  <%-include("../partials/menu")%>
+  <style>
 
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center">
 
-      <!-- Background image -->
-      <div class="text-center bg-image"
-        style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
-        <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">ABOUT THE<br>CABINET</h1>
+  </style>
+
+  <body>
+    <!-- prettier-ignore -->
+    <%- include("../partials/menu") %>
+
+
+      <!-- ======= Hero Section ======= -->
+      <section id="hero" class="d-flex align-items-center">
+
+        <!-- Background image -->
+        <div class="text-center bg-image"
+          style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
+          <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                <h1 class="mb-3">ABOUT THE<br>CABINET</h1>
+              </div>
             </div>
           </div>
-        </div>
-      </div><!-- Background image -->
+        </div><!-- Background image -->
 
-    </section><!-- End Hero -->
+      </section><!-- End Hero -->
 
-    <main id="main">
+      <main id="main">
 
-      <!-- ======= About Us Section ======= -->
-      <section id="about" class="about">
-        <div class="container">
+        <!-- ======= About Us Section ======= -->
+        <section id="about" class="about">
+          <div class="container">
 
-          <div class="section-title" data-aos="fade-up">
-            <h2>What is the Cabinet?</h2>
-          </div>
-
-          <div class="row content">
-            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
-          </p>
-          <ul>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-          </ul>
-        </div> -->
-            <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
-              <p>
-                The Cabinet consists of 7 ministers nominated by and accountable to the President and appointed by the House via a 2/3rd majority. Each Minister leads their own independent ministry having a specific mandate related to student life at Ashoka. The ministers decide the structure of their ministries and induct students to help them work towards their goals.
-              </p>
-              <!-- <center><a href="#" class="btn-learn-more">Learn More</a></center> -->
+            <div class="section-title" data-aos="fade-up">
+              <h2>President</h2>
             </div>
+
+            <div class="row content">
+              <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
+                <p>
+                  The President serves as the Executive Head of the Student Government and represents the student body
+                  both within and outside the University. They oversee the functioning of all branches, ensure
+                  compliance with the Constitution and Governing Code, and lead the Cabinet. The President also acts as
+                  the principal liaison between students, faculty, and administration.
+                </p>
+                <!-- <p>
+                  <b>Current President:</b><br>
+                  <a href="mailto:insha.husain_ug25@ashoka.edu.in">Insha Husain (UG25)</a>
+                </p> -->
+              </div>
+            </div>
+
           </div>
+        </section><!-- End About Us Section -->
 
-        </div>
-      </section><!-- End About Us Section -->
+        <!-- ======= Vice-President Section ======= -->
+        <section id="vp" class="about">
+          <div class="container">
 
-      <!-- ======= Services Section ======= -->
-      <!-- <section id="services" class="services">
+            <div class="section-title" data-aos="fade-up">
+              <h2>Vice-President</h2>
+            </div>
+
+            <div class="row content">
+              <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
+                <p>
+                  The Vice-President is the second Executive Head and the President's chief aide. They co-lead the
+                  Executive, chair the First-Year Committee, and support the Cabinet in implementing initiatives. The
+                  Vice-President also serves in the House of Representatives and assumes Presidential duties if the
+                  position falls vacant.
+                </p>
+                <!-- <p>
+                  <b>Current Vice-President:</b><br>
+                  <a href="mailto:ahana.walanju_ug25@ashoka.edu.in">Ahana Walanju (UG25)</a>
+                </p> -->
+              </div>
+            </div>
+
+          </div>
+        </section><!-- End Vice-President Section -->
+
+        <!-- ======= Cabinet Section ======= -->
+        <section id="cabinet" class="about">
+          <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+              <h2>Cabinet of Ministers</h2>
+            </div>
+
+            <div class="row content">
+              <div class="col-lg-12 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="50">
+                <p>
+                  The Cabinet comprises seven Ministers who oversee distinct areas of student life and welfare. Each
+                  Minister is nominated by a panel of the President, Vice-President, and Speaker of the House and
+                  confirmed by the House. Ministers have the autonomy to organize their teams and collaborate across
+                  departments to serve student needs.
+                </p>
+              </div>
+            </div>
+
+          </div>
+        </section><!-- End Cabinet Section -->
+
+        <!-- ======= Services Section ======= -->
+        <!-- <section id="services" class="services">
         <div class="container">
 
           <div class="section-title" data-aos="fade-up">
@@ -144,95 +192,95 @@
 
         </div>
       </section> -->
-      <!-- End Services Section -->
+        <!-- End Services Section -->
 
-      <!-- ======= Ministries Section ======= -->
-      <section id="features" class="features">
-        <div class="container">
+        <!-- ======= Ministries Section ======= -->
+        <section id="features" class="features">
+          <div class="container">
 
-          <div class="section-title" data-aos="fade-up">
-            <h2>Ministries</h2>
-          </div>
+            <div class="section-title" data-aos="fade-up">
+              <h2>Ministries</h2>
+            </div>
 
-          <div class="row" data-aos="fade-up" data-aos-delay="50">
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                <h3><a href="/cabinet/culmin">Jazbaa</a></h3>
+            <div class="row" data-aos="fade-up" data-aos-delay="50">
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-store-line" style="color: #ffbb2c;"></i>
+                  <h3><a href="/cabinet/culmin">Jazbaa</a></h3>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                <h3><a href="/cabinet/techmin">Technology Ministry</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+                  <h3><a href="/cabinet/techmin">Technology Ministry</a></h3>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                <h3><a href="/cabinet/maa">Ministry of Academic Affairs</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+                  <h3><a href="/cabinet/maa">Ministry of Academic Affairs</a></h3>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-lg-6 col-md-4 mt-4">
+              <!-- <div class="col-lg-6 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
                 <h3><a href="">Ministry of Parliamentary Affairs</a></h3>
               </div>
             </div> -->
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-database-2-line" style="color: #47aeff;"></i>
-                <h3><a href="/cabinet/envmin">Environment Ministry</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-database-2-line" style="color: #47aeff;"></i>
+                  <h3><a href="/cabinet/envmin">Environment Ministry</a></h3>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-                <h3><a href="/cabinet/mcwb">Ministry of Community & Wellbeing</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+                  <h3><a href="/cabinet/mcwb">Ministry of Community & Wellbeing</a></h3>
+                </div>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-                <h3><a href="/cabinet/clm">Campus Life Ministry</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+                  <h3><a href="/cabinet/clm">Campus Life Ministry</a></h3>
+                </div>
               </div>
-            </div>
-            <!-- <div class="col-lg-6 col-md-4 mt-4">
+              <!-- <div class="col-lg-6 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
                 <h3><a href="">Finance Ministry</a></h3>
               </div>
             </div> -->
-            <div class="col-lg-6 col-md-4 mt-4">
-              <div class="icon-box">
-                <i class="ri-anchor-line" style="color: #b2904f;"></i>
-                <h3><a href="/cabinet/sport">Sports Ministry</a></h3>
+              <div class="col-lg-6 col-md-4 mt-4">
+                <div class="icon-box">
+                  <i class="ri-anchor-line" style="color: #b2904f;"></i>
+                  <h3><a href="/cabinet/sport">Sports Ministry</a></h3>
+                </div>
               </div>
             </div>
+
           </div>
+        </section><!-- End Features Section -->
 
-        </div>
-      </section><!-- End Features Section -->
+        <%- include("../partials/footer") %>
+      </main>
+      <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-      <%-include("../partials/footer")%>
-    </main>
-    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+      <!-- Vendor JS Files -->
+      <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
+      <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+      <script src="/website/assets/vendor/php-email-form/validate.js"></script>
+      <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+      <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
+      <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+      <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
+      <script src="/website/assets/vendor/aos/aos.js"></script>
 
-    <!-- Vendor JS Files -->
-    <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="/website/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
-    <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
-    <script src="/website/assets/vendor/aos/aos.js"></script>
+      <!-- Template Main JS File -->
+      <script src="/website/assets/js/main.js"></script>
 
-    <!-- Template Main JS File -->
-    <script src="/website/assets/js/main.js"></script>
-
-</body>
+  </body>
 
 </html>
