--- a/src/views/website/pages/council.ejs
+++ b/src/views/website/pages/council.ejs
@@ -9,13 +9,16 @@
     <!-- SEO Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Learn about the council of the Ashoka University Student Government (AUSG), their roles in addressing student issues, and the council members dedicated to improving campus life." />
-    <meta name="keywords" content="Ashoka University, AUSG Council, Student Government, Council Members, CADI Policy, Campus Issues, Teach-ins, Student Representation, Ashoka Student Advocacy, Council Committees, Student Cohort Issues, Ashoka University Administration, Council Activities, Student Well-being" />
+    <meta name="description"
+        content="Learn about the council of the Ashoka University Student Government (AUSG), their roles in addressing student issues, and the council members dedicated to improving campus life." />
+    <meta name="keywords"
+        content="Ashoka University, AUSG Council, Student Government, Council Members, CADI Policy, Campus Issues, Teach-ins, Student Representation, Ashoka Student Advocacy, Council Committees, Student Cohort Issues, Ashoka University Administration, Council Activities, Student Well-being" />
     <meta name="author" content="Ashoka University Student Government" />
 
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:title" content="Council - Ashoka University Student Government (AUSG)" />
-    <meta property="og:description" content="Explore the councils of the Ashoka University Student Government (AUSG), their initiatives, and the dedicated members representing student interests." />
+    <meta property="og:description"
+        content="Explore the councils of the Ashoka University Student Government (AUSG), their initiatives, and the dedicated members representing student interests." />
     <meta property="og:image" content="to_be_inserted" />
     <meta property="og:url" content="https://sg.ashoka.edu.in/council" />
     <meta property="og:type" content="website" />
@@ -23,7 +26,8 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Councils - Ashoka University Student Government" />
-    <meta name="twitter:description" content="Discover the AUSG councils, their members, and their efforts to represent student issues and improve campus life." />
+    <meta name="twitter:description"
+        content="Discover the AUSG councils, their members, and their efforts to represent student issues and improve campus life." />
     <meta name="twitter:image" content="to_be_inserted" />
     <meta name="twitter:site" content="@ashokaunisg" />
 
@@ -59,133 +63,131 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<%-include("../partials/post-head")%>
+<%- include('../partials/post-head') %>
 
-<style>
-
-
-
-</style>
-
-<body>
-
-    <%-include("../partials/menu")%>
+    <style>
 
 
-        <!-- ======= Hero Section ======= -->
-        <section id="hero" class="d-flex align-items-center">
 
-            <!-- Background image -->
-            <div class="text-center bg-image"
-                style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
-                <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
-                    <div class="d-flex justify-content-center align-items-center h-100">
-                        <div class="text-white">
-                            <h1 class="mb-3">COUNCIL</h1>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- Background image -->
+    </style>
 
-        </section><!-- End Hero -->
+    <body>
+        <!-- prettier-ignore -->
+        <%- include("../partials/menu") %>
 
-        <main id="main">
 
-            <!-- ======= About Us Section ======= -->
-            <section id="about" class="about">
-                <div class="container">
+            <!-- ======= Hero Section ======= -->
+            <section id="hero" class="d-flex align-items-center">
 
-                    <div class="section-title" data-aos="fade-up">
-                        <h2>About</h2>
-                    </div>
-                    <center>
-                    <div class="row content">
-                        <div class="col-lg-12 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
-                            <p>
-                                The councils continuously work towards representing the issues of their cohort in the
-                                larger Student Government and in front of the administration. Councils have also set up
-                                committees pertaining to specific issues on campus. An example of the work taken up by
-                                the UG council would be looking into the new CADI policy and organising the teach-ins
-                                which ran throughout the month of September.
-                            </p>
-                        </div>
-                    </div>
-                    </center>
-                </div>
-            </section><!-- End About Us Section -->
-
-            <!-- ======= F.A.Q Section ======= -->
-            <section id="faq" class="faq">
-                <div class="container">
-
-                    <div class="section-title" data-aos="fade-up">
-                        <h2>Council</h2>
-                    </div>
-                    <center>
-                        <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
-                            <div class="col-lg-6">
-                                <p>
-                                    <b>Council Members</b>
-                                </p>
-                            </div>
-                            <div class="col-lg-6">
-                                <p>
-                                    Sharmistha Shivhare 
-                                    <br>
-                                    Yashaswi Hegde
-                                    <br>
-                                    Mohin Viraj Gandhi
-                                    <br>
-                                    Ananya Makker 
-                                    <br>
-                                    Charvi Khullar
-                                    <br>
-                                    Anulya P
-                                    <br>
-                                    Aan Rakshit
-                                    <br>
-                                    Ayush Solapurkar 
-                                    <br>
-                                    Meenakshi Rana
-                                    <br>
-                                    Ajitesh Vishwanath
-                                    <br>
-                                    Insha Husain
-                                    <!-- <br>
-                                    Samarth Jain
-                                    <br>
-                                    Shashwat Agarwal
-                                    <br>
-                                    Sidh Kavedia
-                                    <br>
-                                    Trishika Singhania -->
-                                </p>
+                <!-- Background image -->
+                <div class="text-center bg-image"
+                    style="background-image: url('/website/assets/img/ashoka.jpg');width:100%;height: 760px;background-size: cover;background-attachment: fixed;">
+                    <div style="background-color: rgba(0, 0, 0, 0.6);width: 100%;height: 100%;">
+                        <div class="d-flex justify-content-center align-items-center h-100">
+                            <div class="text-white">
+                                <h1 class="mb-3">COUNCIL</h1>
                             </div>
                         </div>
+                    </div>
+                </div><!-- Background image -->
+
+            </section><!-- End Hero -->
+
+            <main id="main">
+
+                <!-- ======= About Us Section ======= -->
+                <section id="about" class="about">
+                    <div class="container">
+
+                        <div class="section-title" data-aos="fade-up">
+                            <h2>About</h2>
                         </div>
+                        <center>
+                            <div class="row content">
+                                <div class="col-lg-12 pt-lg-0 pb-4 pt-0" data-aos="fade-up" data-aos-delay="50">
+                                    <p>
+                                        The councils continuously work towards representing the issues of their cohort
+                                        in the
+                                        larger Student Government and in front of the administration. Councils have also
+                                        set up
+                                        committees pertaining to specific issues on campus. An example of the work taken
+                                        up by
+                                        the UG council would be looking into the new CADI policy and organising the
+                                        teach-ins
+                                        which ran throughout the month of September.
+                                    </p>
+                                </div>
+                            </div>
+                        </center>
+                    </div>
+                </section><!-- End About Us Section -->
+
+                <!-- ======= F.A.Q Section ======= -->
+                <section id="faq" class="faq">
+                    <div class="container">
+
+                        <div class="section-title" data-aos="fade-up">
+                            <h2>Council</h2>
+                        </div>
+                        <center>
+                            <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
+                                <div class="col-lg-6">
+                                    <p>
+                                        <b>Council Members</b>
+                                    </p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p>
+                                        Aditya Apurva (UG25)
+                                        <br>
+                                        Ayush Solapurkar (UG2023)
+                                        <br>
+                                        Hima Madhu (UG2024)
+                                        <br>
+                                        Karandeep Gill (UG25)
+                                        <br>
+                                        Kritin Bhasin (UG2024)
+                                        <br>
+                                        Partho Roy (UG2024)
+                                        <br>
+                                        Sahaj Kishen (UG25)
+                                        <br>
+                                        Shatakshi Shelly (UG2024)
+                                        <br>
+                                        Sneha Menon (UG25)
+                                        <br>
+                                        Tanisha Iyer (UG25)
+                                        <br>
+                                        Trisha Iyer (UG2024)
+                                        <br>
+                                        Naisha Kamboj (UG25)
+                                    </p>
+                                </div>
+                            </div>
+                    </div>
                     </center>
-                </div>
-            </section><!-- End F.A.Q Section -->
+                    </div>
+                </section><!-- End F.A.Q Section -->
 
-            <%-include("../partials/footer")%>
-        </main>
-        <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+                <%- include("../partials/footer") %>
+            </main>
+            <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-        <!-- Vendor JS Files -->
-        <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
-        <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-        <script src="/website/assets/vendor/php-email-form/validate.js"></script>
-        <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-        <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
-        <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-        <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-        <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
-        <script src="/website/assets/vendor/aos/aos.js"></script>
+            <!-- Vendor JS Files -->
+            <script src="/website/assets/vendor/jquery/jquery.min.js"></script>
+            <script src="/website/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+            <script src="/website/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+            <script src="/website/assets/vendor/php-email-form/validate.js"></script>
+            <script src="/website/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+            <script src="/website/assets/vendor/counterup/counterup.min.js"></script>
+            <script src="/website/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+            <script src="/website/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+            <script src="/website/assets/vendor/venobox/venobox.min.js"></script>
+            <script src="/website/assets/vendor/aos/aos.js"></script>
 
-        <!-- Template Main JS File -->
-        <script src="/website/assets/js/main.js"></script>
+            <!-- Template Main JS File -->
+            <script src="/website/assets/js/main.js"></script>
 
-</body>
+    </body>
 
 </html>
